<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/sorting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/product_sans_medium"
        android:text="@string/sorting_description"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sorting_popular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/sort_button_background"
        android:fontFamily="@font/product_sans_medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:padding="8dp"
        android:text="@string/sorting_popular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sorting_title" />

    <TextView
        android:id="@+id/sorting_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/sort_button_background"
        android:fontFamily="@font/product_sans_medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:padding="8dp"
        android:text="@string/sorting_top"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sorting_popular" />

    <TextView
        android:id="@+id/sorting_favourites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/sort_button_background"
        android:fontFamily="@font/product_sans_medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:padding="8dp"
        android:text="@string/sorting_favourites"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sorting_top" />
</androidx.constraintlayout.widget.ConstraintLayout>