<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="cloud.augmentum.common.recyclerview.AdapterType" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="cloud.augmentum.features.favouritemovies.viewmodel.FavouriteMoviesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favourite_movies_base_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favourite_movie_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white"
            android:overScrollMode="never"
            bind:adapterType="@{AdapterType.LINEAR_LAYOUT_MANAGER}"
            bind:source="@{viewModel.listItemViewModels}" />

        <TextView
            android:id="@+id/empty_state_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/product_sans_light"
            android:gravity="center"
            android:text="@string/favourites_empty_state_indicator"
            android:textSize="18sp"
            android:visibility="@{viewModel.isListEmpty ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favourite_movies_appbar" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/favourite_movies_appbar"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.MaterialComponents"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appbar_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/appbar_salut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/product_sans_light"
                    android:text="@string/catalog_salut"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/appbar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/product_sans_medium"
                    android:text="@string/catalog_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appbar_salut" />

                <TextView
                    android:id="@+id/appbar_flavour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/product_sans_light"
                    android:text="@string/favourite_movies_flavour"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appbar_name" />

                <ImageView
                    android:id="@+id/appbar_home_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewModel::onHomeClicked}"
                    android:padding="16dp"
                    android:src="@drawable/ic_home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>